--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.0",
     "autoprefixer": "10.4.14",
+    "canvas-confetti": "^1.6.0",
     "firebase": "^9.15.0",
     "micro": "latest",
     "micro-cors": "latest",
